# skillra_hse_pda

./: .gitignore  AGENTS.md  CODEx_DIFF_PLAN.md  CODEx_PLAN.md  README.md  pyproject.toml  requirements.txt
data/samples/: hh_sample_300.csv
docs/: 00_assignment_TZ.md  01_product_context_skillra.md  02_feature_dictionary_hh.md
docs/source/: TZ_2025.docx  product_team_planing.docx  skillra_features.docx
notebooks/: 01_hse_project.ipynb
parser/: DATA_DICTIONARY.md  README.md  hh_scraper.py
parser/hse_vacancies/: hh_scraper.py
reports/notebooks/: style.css
scripts/: run_pipeline.py  validate_notebook.py  validate_pipeline.py
src/skillra_pda/: __init__.py  cleaning.py  config.py  eda.py  features.py  io.py  market.py  personas.py  viz.py
tests/: conftest.py  test_cleaning.py  test_features.py  test_personas.py
